--- a/privacy.html
+++ b/privacy.html
@@ -13,44 +13,39 @@
     <title>Hello, world!</title>
   </head>
   <body>
-
-
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">Burger</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active"href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Offers </a>
-            </li>
-            <li class="nav-item ">
-            <a class="nav-link" href="#">
-            Restaurants
-            </a>
-
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Careers</a>
-            </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Order Now</a>
-          </li>
-          </ul>
-          <form class="d-flex">
-            <input class="me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-
+    <div>
+      <body>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container">
+            <a class="navbar-brand" href="index.html">Burger</a>
+            <button class="navbar-toggler" type="button">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active"href="about.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="privacy.html">Offers </a>
+                </li>
+                <li class="nav-item ">
+                <a class="nav-link" href="reachout.html">
+                Restaurants
+                </a>
+    
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="career.html">Careers</a>
+                </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Order Now</a>
+              </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     <section class="mains">
       <div class="container"></div>
       <div class="row py-3">
@@ -155,6 +150,22 @@
                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam iure repellat quaerat eius? Unde aliquam animi natus, praesentium blanditiis adipisci quibusdam voluptate quia itaque atque debitis, neque laudantium nostrum ducimus.
                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam iure repellat quaerat eius? Unde aliquam animi natus, praesentium blanditiis adipisci quibusdam voluptate quia itaque atque debitis, neque laudantium nostrum ducimus.</p>
             </div>
+
+      <!-- ================FOOTER================================ -->
+
+      <section class="footer py-5">
+        <div class="container-fluid py-5">
+          <div class="row py-5">
+            <div class="col-lg-10 m-auto"></div>
+            <div class="row">
+              <div class="col-lg-3">
+                <h1 class="py-3">BURGER</h1>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
